# RWS-Lite-Software

./: .gitignore  ADS1115.py  DEVICE_NAME  IMG_0731.HEIC  RD200.py  README.md  autoUpload.sh  collectdata.sh  collector.py  config.py  driver.py  dropbox_consts.py  globals.py  onlinedb.py  options.txt  out_board.py  pyproject.toml  radoneye.py  radoneyebleinterface.py  rclone_data.sh  requirements.txt  setup.py  soilmoist.py  soiltemp.py  uv.py  winddir.py
databases/: __init__.py  db.py  local.py  onlinedb.py
docs/: Dropbox_Setup.md  RWS_Hardware_Documentation.csv  RWS_Hardware_Documentation.xlsx  RWS_Software_Documentation.md  RWS_Software_Documentation.txt  option_example.txt
driver/: __init__.py  __main__.py  config.py  globals.py
legacy/: DS18B20.py  RD200.py  RD200P2_UART  driver.py
rws/: __init__.py
rws/databases/: __init__.py  db.py  onlinedb.py
rws/driver/: __init__.py  __main__.py  config.py  globals.py
rws/server/: __init__.py  index.css  main.py
rws/station/: __init__.py  collector.py  out_board.py  out_pi.py  radoneye.py  soiltemp.py  tphg.py
scripts/: collectdata.sh  ftlabChmod.sh  ftlabFolder.sh  ftlabUpload.sh  setup.sh  startup.sh  upload.sh
server/: README.md  __init__.py  graph.html  graph.py  index.html  index.js  main.py
station/: TPHG_BME680.py  __init__.py  collector.py  collector_tmp.py  out_board.py  out_pi.py  radoneye.py  rainfall.py  soilmoist.py  soiltemp.py  tph.py  tphg.py  winddir.py  windspeed.py
test/: db_test.py
