[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rws"
description = "RWS-Lite Software"
version = "2.0.0"
dependencies = [
    "requests",
    "click",
    "pandas",
    "plotly",
    "dropbox",
    "bleak",
    "tqdm",
    "pigpio",
    "RPi.GPIO",
    "smbus",
    "bme680",
    "adafruit-blinka",
    "adafruit-circuitpython-ads1x15",
    "w1thermsensor"
]
requires-python = ">=3.9"

[project.scripts]
rws = "rws.driver.__main__:main"

[tool.setuptools]
packages = ["rws", "rws.station", "rws.databases", "rws.server", "rws.driver"]
